--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -20,7 +20,10 @@
     "prettier": "prettier . --write --ignore-path ../../.prettierignore",
     "type-check": "tsc --noEmit"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/uuid": "^10.0.0",
+    "uuid": "^10.0.0"
+  },
   "devDependencies": {
     "@chrome-extension-boilerplate/tsconfig": "workspace:*"
   }
