--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,8 @@
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "globals": {
     "chrome": "readonly"
