--- a/pages/popup/package.json
+++ b/pages/popup/package.json
@@ -20,11 +20,15 @@
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
     "@chrome-extension-boilerplate/shared": "workspace:*",
-    "@chrome-extension-boilerplate/storage": "workspace:*"
+    "@chrome-extension-boilerplate/storage": "workspace:*",
+    "@coinmasters/pioneer-lib": "^0.1.54",
+    "@coinmasters/pioneer-react": "^0.7.43",
+    "@coinmasters/types": "^4.7.41",
+    "@coinmasters/wallet-keepkey": "^13.0.43"
   },
   "devDependencies": {
+    "@chrome-extension-boilerplate/hmr": "workspace:*",
     "@chrome-extension-boilerplate/tailwindcss-config": "workspace:*",
-    "@chrome-extension-boilerplate/tsconfig": "workspace:*",
-    "@chrome-extension-boilerplate/hmr": "workspace:*"
+    "@chrome-extension-boilerplate/tsconfig": "workspace:*"
   }
 }
