--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -25,6 +25,7 @@
     "@pioneer-platform/helpers": "^4.0.10",
     "@pioneer-platform/pioneer-coins": "^9.2.23",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.2",
     "ethers": "^6.13.1",
     "uuid": "^10.0.0",
     "webextension-polyfill": "^0.12.0"
