--- a/pages/popup/package.json
+++ b/pages/popup/package.json
@@ -21,10 +21,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@chrome-extension-boilerplate/shared": "workspace:*",
     "@chrome-extension-boilerplate/storage": "workspace:*",
-    "@coinmasters/pioneer-lib": "^0.1.56",
-    "@coinmasters/pioneer-react": "^0.7.45",
-    "@coinmasters/types": "^4.7.45",
-    "@coinmasters/wallet-keepkey": "^13.0.45"
+    "@coinmasters/pioneer-lib": "^0.1.67",
+    "@coinmasters/pioneer-react": "^0.7.56",
+    "@coinmasters/types": "^4.7.56",
+    "@coinmasters/wallet-keepkey": "^13.0.56",
+    "axios": "^1.7.2"
   },
   "devDependencies": {
     "@chrome-extension-boilerplate/hmr": "workspace:*",
