--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -20,9 +20,12 @@
   "dependencies": {
     "@chrome-extension-boilerplate/shared": "workspace:*",
     "@chrome-extension-boilerplate/storage": "workspace:*",
+    "@coinmasters/pioneer-db": "^4.7.61",
+    "@coinmasters/pioneer-sdk": "^4.7.62",
     "@coinmasters/types": "^4.7.62",
     "@coinmasters/wallet-keepkey": "^13.0.62",
     "@pioneer-platform/helpers": "^4.0.12",
+    "@pioneer-platform/pioneer-caip": "^9.2.32",
     "@pioneer-platform/pioneer-coins": "^9.2.23",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
